trunk/Analyseur/Anal_minijaja/src/main/java/MiniJaja.java
/* Generated By:JJTree&JavaCC: Do not edit this line. MiniJaja.java */
        import java.io.*;

public class MiniJaja/*@bgen(jjtree)*/implements MiniJajaTreeConstants, MiniJajaConstants {/*@bgen(jjtree)*/
  protected static JJTMiniJajaState jjtree = new JJTMiniJajaState();
        public static void main (String arg[]) throws ParseException, FileNotFoundException {
        //MiniJaja mjj = new MiniJaja(new FileReader(new File("/home/ubuntu1/exemple.txt")));
        //mjj.classe();

        //Node racine = mjj.jjtree.rootNode();
        //((SimpleNode)racine).dump("-->");
        //System.out.println("caillou l'hiboux du coup");
        }

public JJTMiniJajaState getJJTree() {
	return jjtree;
}

// Regles syntaxicales
  static final public void classe() throws ParseException {
                         /*@bgen(jjtree) classe */
  ASTclasse jjtn000 = new ASTclasse(JJTCLASSE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(CLASS);
      ident();
      jj_consume_token(LACCOL);
      decls();
      methmain();
      jj_consume_token(RACCOL);
      jj_consume_token(0);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void ident() throws ParseException {
                      /*@bgen(jjtree) ident */
  ASTident jjtn000 = new ASTident(JJTIDENT);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IDENTIFIER);
                       jjtree.closeNodeScope(jjtn000, true);
                       jjtc000 = false;
                       jjtn000.setValeur(token.image);
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000, true);
          }
    }
  }

  static final public void decls() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case FINAL:
    case INT:
    case VOID:
      decl();
      jj_consume_token(POINTVIRG);
                             ASTdecls jjtn001 = new ASTdecls(JJTDECLS);
                             boolean jjtc001 = true;
                             jjtree.openNodeScope(jjtn001);
      try {
        decls();
      } catch (Throwable jjte001) {
                             if (jjtc001) {
                               jjtree.clearNodeScope(jjtn001);
                               jjtc001 = false;
                             } else {
                               jjtree.popNode();
                             }
                             if (jjte001 instanceof RuntimeException) {
                               {if (true) throw (RuntimeException)jjte001;}
                             }
                             if (jjte001 instanceof ParseException) {
                               {if (true) throw (ParseException)jjte001;}
                             }
                             {if (true) throw (Error)jjte001;}
      } finally {
                             if (jjtc001) {
                               jjtree.closeNodeScope(jjtn001,  2);
                             }
      }
      break;
    default:
      jj_la1[0] = jj_gen;
            ASTvnil jjtn002 = new ASTvnil(JJTVNIL);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
      try {
            jjtree.closeNodeScope(jjtn002, true);
            jjtc002 = false;

      } finally {
            if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
      }
    }
  }

  static final public void decl() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FINAL:
      jj_consume_token(FINAL);
      type();
      ident();
                                 ASTcst jjtn001 = new ASTcst(JJTCST);
                                 boolean jjtc001 = true;
                                 jjtree.openNodeScope(jjtn001);
      try {
        vexp();
      } catch (Throwable jjte001) {
                                 if (jjtc001) {
                                   jjtree.clearNodeScope(jjtn001);
                                   jjtc001 = false;
                                 } else {
                                   jjtree.popNode();
                                 }
                                 if (jjte001 instanceof RuntimeException) {
                                   {if (true) throw (RuntimeException)jjte001;}
                                 }
                                 if (jjte001 instanceof ParseException) {
                                   {if (true) throw (ParseException)jjte001;}
                                 }
                                 {if (true) throw (Error)jjte001;}
      } finally {
                                 if (jjtc001) {
                                   jjtree.closeNodeScope(jjtn001,  3);
                                 }
      }
      break;
    case BOOLEAN:
    case INT:
    case VOID:
      typemeth();
      ident();
      declbis();
      break;
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void declbis() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LCROCH:
      jj_consume_token(LCROCH);
      exp();
                         ASTtableau jjtn001 = new ASTtableau(JJTTABLEAU);
                         boolean jjtc001 = true;
                         jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RCROCH);
      } finally {
                         if (jjtc001) {
                           jjtree.closeNodeScope(jjtn001,  3);
                         }
      }
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      entetes();
      jj_consume_token(RPAREN);
      jj_consume_token(LACCOL);
      vars();
      instrs();
                                                                 ASTmethode jjtn002 = new ASTmethode(JJTMETHODE);
                                                                 boolean jjtc002 = true;
                                                                 jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(RACCOL);
      } finally {
                                                                 if (jjtc002) {
                                                                   jjtree.closeNodeScope(jjtn002,  5);
                                                                 }
      }
      break;
    default:
      jj_la1[2] = jj_gen;
            ASTvar jjtn003 = new ASTvar(JJTVAR);
            boolean jjtc003 = true;
            jjtree.openNodeScope(jjtn003);
      try {
        vexp();
      } catch (Throwable jjte003) {
            if (jjtc003) {
              jjtree.clearNodeScope(jjtn003);
              jjtc003 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte003 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte003;}
            }
            if (jjte003 instanceof ParseException) {
              {if (true) throw (ParseException)jjte003;}
            }
            {if (true) throw (Error)jjte003;}
      } finally {
            if (jjtc003) {
              jjtree.closeNodeScope(jjtn003,  3);
            }
      }
    }
  }

  static final public void vars() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case FINAL:
    case INT:
    case VOID:
      var();
      jj_consume_token(POINTVIRG);
                            ASTvars jjtn001 = new ASTvars(JJTVARS);
                            boolean jjtc001 = true;
                            jjtree.openNodeScope(jjtn001);
      try {
        vars();
      } catch (Throwable jjte001) {
                            if (jjtc001) {
                              jjtree.clearNodeScope(jjtn001);
                              jjtc001 = false;
                            } else {
                              jjtree.popNode();
                            }
                            if (jjte001 instanceof RuntimeException) {
                              {if (true) throw (RuntimeException)jjte001;}
                            }
                            if (jjte001 instanceof ParseException) {
                              {if (true) throw (ParseException)jjte001;}
                            }
                            {if (true) throw (Error)jjte001;}
      } finally {
                            if (jjtc001) {
                              jjtree.closeNodeScope(jjtn001,  2);
                            }
      }
      break;
    default:
      jj_la1[3] = jj_gen;
            ASTvnil jjtn002 = new ASTvnil(JJTVNIL);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
      try {
            jjtree.closeNodeScope(jjtn002, true);
            jjtc002 = false;

      } finally {
            if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
      }
    }
  }

  static final public void var() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FINAL:
      jj_consume_token(FINAL);
      type();
      ident();
                                 ASTcst jjtn001 = new ASTcst(JJTCST);
                                 boolean jjtc001 = true;
                                 jjtree.openNodeScope(jjtn001);
      try {
        vexp();
      } catch (Throwable jjte001) {
                                 if (jjtc001) {
                                   jjtree.clearNodeScope(jjtn001);
                                   jjtc001 = false;
                                 } else {
                                   jjtree.popNode();
                                 }
                                 if (jjte001 instanceof RuntimeException) {
                                   {if (true) throw (RuntimeException)jjte001;}
                                 }
                                 if (jjte001 instanceof ParseException) {
                                   {if (true) throw (ParseException)jjte001;}
                                 }
                                 {if (true) throw (Error)jjte001;}
      } finally {
                                 if (jjtc001) {
                                   jjtree.closeNodeScope(jjtn001,  3);
                                 }
      }
      break;
    case BOOLEAN:
    case INT:
    case VOID:
      typemeth();
      ident();
      varbis();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void varbis() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LCROCH:
      jj_consume_token(LCROCH);
      exp();
                         ASTtableau jjtn001 = new ASTtableau(JJTTABLEAU);
                         boolean jjtc001 = true;
                         jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RCROCH);
      } finally {
                         if (jjtc001) {
                           jjtree.closeNodeScope(jjtn001,  3);
                         }
      }
      break;
    default:
      jj_la1[5] = jj_gen;
             ASTvar jjtn002 = new ASTvar(JJTVAR);
             boolean jjtc002 = true;
             jjtree.openNodeScope(jjtn002);
      try {
        vexp();
      } catch (Throwable jjte002) {
             if (jjtc002) {
               jjtree.clearNodeScope(jjtn002);
               jjtc002 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte002 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte002;}
             }
             if (jjte002 instanceof ParseException) {
               {if (true) throw (ParseException)jjte002;}
             }
             {if (true) throw (Error)jjte002;}
      } finally {
             if (jjtc002) {
               jjtree.closeNodeScope(jjtn002,  3);
             }
      }
    }
  }

  static final public void vexp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
      exp();
      break;
    default:
      jj_la1[6] = jj_gen;
            ASTomega jjtn001 = new ASTomega(JJTOMEGA);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
      try {
            jjtree.closeNodeScope(jjtn001, true);
            jjtc001 = false;

      } finally {
            if (jjtc001) {
              jjtree.closeNodeScope(jjtn001, true);
            }
      }
    }
  }

  static final public void methmain() throws ParseException {
                            /*@bgen(jjtree) #main( 2) */
  ASTmain jjtn000 = new ASTmain(JJTMAIN);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MAIN);
      jj_consume_token(LACCOL);
      vars();
      instrs();
      jj_consume_token(RACCOL);
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
          {if (true) throw (Error)jjte000;}
    } finally {
          if (jjtc000) {
            jjtree.closeNodeScope(jjtn000,  2);
          }
    }
  }

  static final public void entetes() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BOOLEAN:
    case INT:
      entete();
                   ASTentetes jjtn001 = new ASTentetes(JJTENTETES);
                   boolean jjtc001 = true;
                   jjtree.openNodeScope(jjtn001);
      try {
        entetes2();
      } catch (Throwable jjte001) {
                   if (jjtc001) {
                     jjtree.clearNodeScope(jjtn001);
                     jjtc001 = false;
                   } else {
                     jjtree.popNode();
                   }
                   if (jjte001 instanceof RuntimeException) {
                     {if (true) throw (RuntimeException)jjte001;}
                   }
                   if (jjte001 instanceof ParseException) {
                     {if (true) throw (ParseException)jjte001;}
                   }
                   {if (true) throw (Error)jjte001;}
      } finally {
                   if (jjtc001) {
                     jjtree.closeNodeScope(jjtn001,  2);
                   }
      }
      break;
    default:
      jj_la1[7] = jj_gen;
            ASTenil jjtn002 = new ASTenil(JJTENIL);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
      try {
            jjtree.closeNodeScope(jjtn002, true);
            jjtc002 = false;

      } finally {
            if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
      }
    }
  }

  static final public void entetes2() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VIRG:
      jj_consume_token(VIRG);
      entete();
                          ASTentetes jjtn001 = new ASTentetes(JJTENTETES);
                          boolean jjtc001 = true;
                          jjtree.openNodeScope(jjtn001);
      try {
        entetes2();
      } catch (Throwable jjte001) {
                          if (jjtc001) {
                            jjtree.clearNodeScope(jjtn001);
                            jjtc001 = false;
                          } else {
                            jjtree.popNode();
                          }
                          if (jjte001 instanceof RuntimeException) {
                            {if (true) throw (RuntimeException)jjte001;}
                          }
                          if (jjte001 instanceof ParseException) {
                            {if (true) throw (ParseException)jjte001;}
                          }
                          {if (true) throw (Error)jjte001;}
      } finally {
                          if (jjtc001) {
                            jjtree.closeNodeScope(jjtn001,  2);
                          }
      }
      break;
    default:
      jj_la1[8] = jj_gen;
            ASTenil jjtn002 = new ASTenil(JJTENIL);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
      try {
            jjtree.closeNodeScope(jjtn002, true);
            jjtc002 = false;

      } finally {
            if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
      }
    }
  }

  static final public void entete() throws ParseException {
    type();
                 ASTentete jjtn001 = new ASTentete(JJTENTETE);
                 boolean jjtc001 = true;
                 jjtree.openNodeScope(jjtn001);
    try {
      ident();
    } catch (Throwable jjte001) {
                 if (jjtc001) {
                   jjtree.clearNodeScope(jjtn001);
                   jjtc001 = false;
                 } else {
                   jjtree.popNode();
                 }
                 if (jjte001 instanceof RuntimeException) {
                   {if (true) throw (RuntimeException)jjte001;}
                 }
                 if (jjte001 instanceof ParseException) {
                   {if (true) throw (ParseException)jjte001;}
                 }
                 {if (true) throw (Error)jjte001;}
    } finally {
                 if (jjtc001) {
                   jjtree.closeNodeScope(jjtn001,  2);
                 }
    }
  }

  static final public void instrs() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
    case RETURN:
    case WHILE:
    case IDENTIFIER:
      instr();
      jj_consume_token(POINTVIRG);
                              ASTinstrs jjtn001 = new ASTinstrs(JJTINSTRS);
                              boolean jjtc001 = true;
                              jjtree.openNodeScope(jjtn001);
      try {
        instrs();
      } catch (Throwable jjte001) {
                              if (jjtc001) {
                                jjtree.clearNodeScope(jjtn001);
                                jjtc001 = false;
                              } else {
                                jjtree.popNode();
                              }
                              if (jjte001 instanceof RuntimeException) {
                                {if (true) throw (RuntimeException)jjte001;}
                              }
                              if (jjte001 instanceof ParseException) {
                                {if (true) throw (ParseException)jjte001;}
                              }
                              {if (true) throw (Error)jjte001;}
      } finally {
                              if (jjtc001) {
                                jjtree.closeNodeScope(jjtn001,  2);
                              }
      }
      break;
    default:
      jj_la1[9] = jj_gen;
            ASTinil jjtn002 = new ASTinil(JJTINIL);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
      try {
            jjtree.closeNodeScope(jjtn002, true);
            jjtc002 = false;

      } finally {
            if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
      }
    }
  }

  static final public void instr() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case RETURN:
      jj_consume_token(RETURN);
                   ASTretour jjtn001 = new ASTretour(JJTRETOUR);
                   boolean jjtc001 = true;
                   jjtree.openNodeScope(jjtn001);
      try {
        exp();
      } catch (Throwable jjte001) {
                   if (jjtc001) {
                     jjtree.clearNodeScope(jjtn001);
                     jjtc001 = false;
                   } else {
                     jjtree.popNode();
                   }
                   if (jjte001 instanceof RuntimeException) {
                     {if (true) throw (RuntimeException)jjte001;}
                   }
                   if (jjte001 instanceof ParseException) {
                     {if (true) throw (ParseException)jjte001;}
                   }
                   {if (true) throw (Error)jjte001;}
      } finally {
                   if (jjtc001) {
                     jjtree.closeNodeScope(jjtn001, true);
                   }
      }
      break;
    case WHILE:
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      exp();
      jj_consume_token(RPAREN);
      jj_consume_token(LACCOL);
      instrs();
                                                              ASTtantque jjtn002 = new ASTtantque(JJTTANTQUE);
                                                              boolean jjtc002 = true;
                                                              jjtree.openNodeScope(jjtn002);
      try {
        jj_consume_token(RACCOL);
      } finally {
                                                              if (jjtc002) {
                                                                jjtree.closeNodeScope(jjtn002,  2);
                                                              }
      }
      break;
    case IF:
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      exp();
      jj_consume_token(RPAREN);
      jj_consume_token(LACCOL);
      instrs();
      jj_consume_token(RACCOL);
                                                                    ASTsi jjtn003 = new ASTsi(JJTSI);
                                                                    boolean jjtc003 = true;
                                                                    jjtree.openNodeScope(jjtn003);
      try {
        elseNode();
      } catch (Throwable jjte003) {
                                                                    if (jjtc003) {
                                                                      jjtree.clearNodeScope(jjtn003);
                                                                      jjtc003 = false;
                                                                    } else {
                                                                      jjtree.popNode();
                                                                    }
                                                                    if (jjte003 instanceof RuntimeException) {
                                                                      {if (true) throw (RuntimeException)jjte003;}
                                                                    }
                                                                    if (jjte003 instanceof ParseException) {
                                                                      {if (true) throw (ParseException)jjte003;}
                                                                    }
                                                                    {if (true) throw (Error)jjte003;}
      } finally {
                                                                    if (jjtc003) {
                                                                      jjtree.closeNodeScope(jjtn003,  3);
                                                                    }
      }
      break;
    case IDENTIFIER:
      ident();
      instrbis();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void elseNode() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      jj_consume_token(LACCOL);
      instrs();
      jj_consume_token(RACCOL);
      break;
    default:
      jj_la1[11] = jj_gen;
            ASTinil jjtn001 = new ASTinil(JJTINIL);
            boolean jjtc001 = true;
            jjtree.openNodeScope(jjtn001);
      try {
            jjtree.closeNodeScope(jjtn001, true);
            jjtc001 = false;

      } finally {
            if (jjtc001) {
              jjtree.closeNodeScope(jjtn001, true);
            }
      }
    }
  }

  static final public void instrbis() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LCROCH:
    case ASSIGN:
    case INCR:
    case PLUSASSIGN:
      identbis();
      instrbisbis();
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      listexp();
                               ASTappelI jjtn001 = new ASTappelI(JJTAPPELI);
                               boolean jjtc001 = true;
                               jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RPAREN);
      } finally {
                               if (jjtc001) {
                                 jjtree.closeNodeScope(jjtn001,  2);
                               }
      }
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void instrbisbis() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
                   ASTaffectation jjtn001 = new ASTaffectation(JJTAFFECTATION);
                   boolean jjtc001 = true;
                   jjtree.openNodeScope(jjtn001);
      try {
        exp();
      } catch (Throwable jjte001) {
                   if (jjtc001) {
                     jjtree.clearNodeScope(jjtn001);
                     jjtc001 = false;
                   } else {
                     jjtree.popNode();
                   }
                   if (jjte001 instanceof RuntimeException) {
                     {if (true) throw (RuntimeException)jjte001;}
                   }
                   if (jjte001 instanceof ParseException) {
                     {if (true) throw (ParseException)jjte001;}
                   }
                   {if (true) throw (Error)jjte001;}
      } finally {
                   if (jjtc001) {
                     jjtree.closeNodeScope(jjtn001,  2);
                   }
      }
      break;
    case PLUSASSIGN:
      jj_consume_token(PLUSASSIGN);
                         ASTsomme jjtn002 = new ASTsomme(JJTSOMME);
                         boolean jjtc002 = true;
                         jjtree.openNodeScope(jjtn002);
      try {
        exp();
      } catch (Throwable jjte002) {
                         if (jjtc002) {
                           jjtree.clearNodeScope(jjtn002);
                           jjtc002 = false;
                         } else {
                           jjtree.popNode();
                         }
                         if (jjte002 instanceof RuntimeException) {
                           {if (true) throw (RuntimeException)jjte002;}
                         }
                         if (jjte002 instanceof ParseException) {
                           {if (true) throw (ParseException)jjte002;}
                         }
                         {if (true) throw (Error)jjte002;}
      } finally {
                         if (jjtc002) {
                           jjtree.closeNodeScope(jjtn002,  2);
                         }
      }
      break;
    case INCR:
            ASTincrement jjtn003 = new ASTincrement(JJTINCREMENT);
            boolean jjtc003 = true;
            jjtree.openNodeScope(jjtn003);
      try {
        jj_consume_token(INCR);
      } finally {
            if (jjtc003) {
              jjtree.closeNodeScope(jjtn003,  1);
            }
      }
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void identbis() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LCROCH:
      jj_consume_token(LCROCH);
      exp();
                           ASTtab jjtn001 = new ASTtab(JJTTAB);
                           boolean jjtc001 = true;
                           jjtree.openNodeScope(jjtn001);
      try {
        jj_consume_token(RCROCH);
      } finally {
                           if (jjtc001) {
                             jjtree.closeNodeScope(jjtn001,  2);
                           }
      }
      break;
    default:
      jj_la1[14] = jj_gen;
      ;
    }
  }

  static final public void listexp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FALSE:
    case TRUE:
    case LPAREN:
    case IDENTIFIER:
    case NOMBRE:
    case BANG:
    case MINUS:
      exp();
                ASTlistexp jjtn001 = new ASTlistexp(JJTLISTEXP);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
      try {
        listexpbis();
      } catch (Throwable jjte001) {
                if (jjtc001) {
                  jjtree.clearNodeScope(jjtn001);
                  jjtc001 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte001 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte001;}
                }
                if (jjte001 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte001;}
                }
                {if (true) throw (Error)jjte001;}
      } finally {
                if (jjtc001) {
                  jjtree.closeNodeScope(jjtn001,  2);
                }
      }
      break;
    default:
      jj_la1[15] = jj_gen;
            ASTexnil jjtn002 = new ASTexnil(JJTEXNIL);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
      try {
            jjtree.closeNodeScope(jjtn002, true);
            jjtc002 = false;

      } finally {
            if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
      }
    }
  }

  static final public void listexpbis() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VIRG:
      jj_consume_token(VIRG);
      exp();
                       ASTlistexp jjtn001 = new ASTlistexp(JJTLISTEXP);
                       boolean jjtc001 = true;
                       jjtree.openNodeScope(jjtn001);
      try {
        listexpbis();
      } catch (Throwable jjte001) {
                       if (jjtc001) {
                         jjtree.clearNodeScope(jjtn001);
                         jjtc001 = false;
                       } else {
                         jjtree.popNode();
                       }
                       if (jjte001 instanceof RuntimeException) {
                         {if (true) throw (RuntimeException)jjte001;}
                       }
                       if (jjte001 instanceof ParseException) {
                         {if (true) throw (ParseException)jjte001;}
                       }
                       {if (true) throw (Error)jjte001;}
      } finally {
                       if (jjtc001) {
                         jjtree.closeNodeScope(jjtn001,  2);
                       }
      }
      break;
    default:
      jj_la1[16] = jj_gen;
            ASTexnil jjtn002 = new ASTexnil(JJTEXNIL);
            boolean jjtc002 = true;
            jjtree.openNodeScope(jjtn002);
      try {
            jjtree.closeNodeScope(jjtn002, true);
            jjtc002 = false;

      } finally {
            if (jjtc002) {
              jjtree.closeNodeScope(jjtn002, true);
            }
      }
    }
  }
